# player

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  cli.py  config.py  example_config  example_config.json  example_config.yml  file_browser.py  horizontal_panes.py  player  player.py  playlist.py  pyproject.toml  requirements.txt  tests_run  tracks_factory.py
archlinux/: PKGBUILD
backends/: mplayer.py
cli/: cli.py
cueparser/: requirements.txt  tests_run
file_browser/: dir_entry.py  file_browser.py
playerlib/: async.py  async_caller.py  command_handler.py  command_panel.py  commands.py  completer.py  config.py  context.py  cue_parser.py  horizontal_panes.py  main_view.py  playback_controller.py  player.py  player_context.py  player_controller.py  player_view.py  track.py  tracks_factory.py  user_input.py  window.py
playlist/: entry.py  playlist.py
test/: backend_factory_tests.py  backend_interface_tests.py  bookmarks_tests.py  command_handler_tests.py  command_panel_completer_tests.py  command_panel_tests.py  completer_tests.py  config_tests.py  cueparser_tests.py  file_browser_tests.py  helpers_tests.py  mplayer_backend_tests.py  playback_controller_tests.py  player_controller_tests.py  player_view_tests.py  playlist_tests.py  rdb_tests.py  run  track_tests.py  tracks_factory_tests.py  tracks_reader_tests.py  urwim_command_handler_tests.py  urwim_command_panel_tests.py  urwim_completer_tests.py  urwim_config_tests.py  urwim_rdb_tests.py  urwim_user_input_tests.py  user_input_tests.py  window_tests.py
urwim/: __init__.py  app.py  (+11 more)
(+65 files in other folders)
